--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,37 @@
 sudo: required
 services:
   - docker
+env:
+    global:
+      # for unique tags for build images
+      - SHA=$(git rev-parse HEAD)
+      # ไม่ต้อง gcloud command แสดง prompts ที่ต้องมีการ input แล้วรอรับคำสั่ง
+      - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
+  # unencrypt service-account.json.enc from google cloud sdk
   - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
+  # install google cloud sdk & kubectl
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
+  # login google cloud by service account.json file
   - gcloud auth activate-service-account --key-file service-account.json
+
+  # config google cloud project
+  - gcloud config set project docker-multi-k8s-319100
+  - gcloud config set compute/zone asia-southeast1-a
+  - gcloud container clusters get-credentials multi-cluster
+
+  # login docker & build image for test
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker build -t vault99/docker-multi-k8s-client-test -f ./client/Dockerfile.dev ./client
+
+# test image before deploy
+script:
+  - docker run -e CI=true vault99/docker-multi-k8s-client-test npm test -- --coverage
+
+deploy:
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
